--- a/fit.html
+++ b/fit.html
@@ -160,8 +160,8 @@
                         </div>
                         <!-- Quality Card 4 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-xl font-bold text-slate-800">Detail Oriented</h3>
-                            <p class="text-slate-600 mt-4">My experiences in law and computer programming have trained me to be meticulous. I understand that every detail matters, a lesson reinforced by a childhood deal with my mom—$10 for every silly math mistake. I never made one again.</p>
+                            <h3 class="text-xl font-bold text-slate-800">Detail-Oriented</h3>
+                            <p class="text-slate-600 mt-4">My experiences in law and computer programming have trained me to be meticulous. I understand that every detail matters, a lesson reinforced by a childhood deal with my mom: $10 for every silly math mistake. I never made one again.</p>
                         </div>
                         <!-- Quality Card 5 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
