--- a/fit.html
+++ b/fit.html
@@ -151,7 +151,7 @@
                         <!-- Quality Card 2 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                              <h3 class="text-xl font-bold text-slate-800">Energy</h3>
-                            <p class="text-slate-600 mt-4">I bring a contagious, positive energy to every room I enter. I'm fun to be around and genuinely enjoy raising the collective morale and ceiling of the group.</p>
+                            <p class="text-slate-600 mt-4">I bring a contagious, positive energy to every room I enter. People feel my kindness and positivity: I’ve even had strangers compliment my good energy at restaurants, the beach, church, etc. I genuinely enjoy raising the collective morale and ceiling of the group.</p>
                         </div>
                         <!-- Quality Card 3 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
@@ -166,7 +166,7 @@
                         <!-- Quality Card 5 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-xl font-bold text-slate-800">Hard Worker</h3>
-                            <p class="text-slate-600 mt-4">I am one of the hardest workers I know and am eager to do whatever it takes to help the team win, including the "boring work." My commitment is outlined in detail on the Resume page.</p>
+                            <p class="text-slate-600 mt-4">I am one of the hardest workers I know and am eager to do whatever it takes to help the team win. I also reflect on my progress daily to do more of what's working, ensuring I work smart, not just hard.</p>
                         </div>
                         <!-- Quality Card 6 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
@@ -181,7 +181,7 @@
                         <!-- Quality Card 8 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-xl font-bold text-slate-800">Good Communicator</h3>
-                            <p class="text-slate-600 mt-4">I listen well, do my best to be articulate and easy to understand, and I make no assumptions—I spell things out to make sure everyone is on the same page.</p>
+                            <p class="text-slate-600 mt-4">I listen well, write clearly, and read the room. I do my best to be articulate and easy to understand, and I make no assumptions; I spell things out to make sure everyone is on the same page.</p>
                         </div>
                         <!-- Quality Card 9 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
@@ -195,6 +195,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Humility Note Section -->
+        <section id="humility-note" class="container mx-auto px-6 pt-16">
+            <div class="max-w-3xl mx-auto text-center bg-slate-50 p-6 rounded-xl border border-slate-200">
+                <p class="text-slate-600 italic">A quick final note: I’m generally quite humble, but I've been super straightforward with my strengths in this application. We don’t have the luxury of getting to know each other over the course of days or weeks, so I wanted to be as clear as possible about the value I can bring to the team.</p>
             </div>
         </section>
 
