--- a/goals.html
+++ b/goals.html
@@ -30,13 +30,13 @@
         #mobile-menu {
             transition: opacity 0.3s ease-in-out;
         }
-        /* NEW: Goal card hover effect */
+        /* Goal card hover effect */
         .goal-card {
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
         .goal-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.15);
+            transform: scale(1.02);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
@@ -101,24 +101,40 @@
                     <h2 class="text-3xl md:text-4xl font-bold text-slate-900">My First 90 Days</h2>
                     <p class="mt-4 max-w-2xl mx-auto text-slate-600">Assuming I earn the role, here is how I plan to approach my first three months to create immediate value.</p>
                 </div>
-                <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-8 text-center">
+                <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-8 text-left">
                     <!-- 30 Days -->
                     <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
-                        <div class="text-sky-500 font-bold text-lg">First 30 Days</div>
-                        <h3 class="text-2xl font-semibold mt-2 text-slate-800">Placeholder</h3>
-                        <p class="text-slate-600 mt-4">X</p>
+                        <div class="text-sky-500 font-bold text-lg text-center">First 30 Days</div>
+                        <h3 class="text-2xl font-semibold mt-2 text-slate-800 text-center">Deep Immersion & Immediate Contribution</h3>
+                        <ul class="text-slate-600 mt-6 space-y-4 list-disc list-inside">
+                            <li><strong>Self-Onboard Proactively:</strong> Take the initiative to onboard myself by absorbing all available documentation, memos, and frameworks, while eagerly welcoming guidance from leadership to accelerate my integration.</li>
+                            <li><strong>Connect with the Advisory Team:</strong> Meet with every member of the advisory group to understand their roles, learn from their experience, and ask for their advice on how to succeed at ACQ.</li>
+                            <li><strong>Own the "Boring Work":</strong> Accelerate the team by taking meticulous notes in meetings, preparing first drafts of memos and decks, and organizing raw information into structured, usable formats.</li>
+                            <li><strong>Drive the Deliverable Process:</strong> Add immediate value by refining existing deliverables for clarity, conducting market research to support current projects, and representing the ACQ brand professionally in all interactions.</li>
+                            <li><strong>Support Data Analysis:</strong> Join client discovery calls to listen and synthesize key problems, and assist in gathering and analyzing data to support the team's strategic insights.</li>
+                        </ul>
                     </div>
                     <!-- 60 Days -->
                     <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
-                        <div class="text-sky-500 font-bold text-lg">First 60 Days</div>
-                        <h3 class="text-2xl font-semibold mt-2 text-slate-800">Placeholder</h3>
-                        <p class="text-slate-600 mt-4">X</p>
+                        <div class="text-sky-500 font-bold text-lg text-center">First 60 Days</div>
+                        <h3 class="text-2xl font-semibold mt-2 text-slate-800 text-center">Expanding Impact & Taking Ownership</h3>
+                        <ul class="text-slate-600 mt-6 space-y-4 list-disc list-inside">
+                            <li><strong>Extend Internal Outreach:</strong> Connect with key members of other departments (Marketing, Sales, Tech) to build a holistic understanding of the business and foster cross-functional relationships.</li>
+                            <li><strong>Own a Deliverable:</strong> Transition from preparing first drafts to taking full ownership of a smaller, well-defined client deliverable from initial analysis to final refinement.</li>
+                            <li><strong>Identify a Pain Point:</strong> Based on observations, identify one internal process or client-facing framework that could be improved and write a "shitty first draft" of a memo proposing a solution.</li>
+                             <li><strong>Master Core Frameworks:</strong> Demonstrate a strong working knowledge of Acquisition.com's primary consulting frameworks by actively applying them in client work and internal discussions.</li>
+                        </ul>
                     </div>
                     <!-- 90 Days -->
                     <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
-                        <div class="text-sky-500 font-bold text-lg">First 90 Days</div>
-                        <h3 class="text-2xl font-semibold mt-2 text-slate-800">Placeholder</h3>
-                        <p class="text-slate-600 mt-4">X</p>
+                        <div class="text-sky-500 font-bold text-lg text-center">First 90 Days</div>
+                        <h3 class="text-2xl font-semibold mt-2 text-slate-800 text-center">Driving Results & Autonomous Operation</h3>
+                        <ul class="text-slate-600 mt-6 space-y-4 list-disc list-inside">
+                            <li><strong>Deliver a Tangible Result:</strong> Move from identifying a pain point to executing the solution. My goal is to deliver a specific, measurable improvement to the process or framework I identified.</li>
+                            <li><strong>Contribute a Strategic Insight:</strong> Leverage pattern recognition across clients to identify an overarching theme or trend, and present this strategic insight to the team in a well-researched memo.</li>
+                            <li><strong>Operate Autonomously:</strong> Demonstrate the ability to manage my projects and priorities with minimal oversight, consistently delivering high-quality results on or ahead of schedule.</li>
+                            <li><strong>Become a Go-To Resource:</strong> Through my contributions and understanding of the business, aim to become a reliable and trusted resource for the advisory team on at least one key framework or process.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -129,11 +145,12 @@
             <div class="container mx-auto px-6 py-24">
                 <div class="max-w-3xl mx-auto text-center">
                     <h2 class="text-3xl md:text-4xl font-bold text-slate-900">Long-Term Aspirations</h2>
-                    <p class="mt-4 text-slate-600">Beyond the first 90 days, my ambitions are focused on deep expertise and entrepreneurial growth.</p>
-                    <div class="mt-8 text-left space-y-4 text-slate-600 bg-slate-50 p-8 rounded-xl border border-slate-200">
-                        <p><strong>Placeholder:</strong> X</p>
-                        <p><strong>Placeholder:</strong> X</p>
-                        <p><strong>Placeholder:</strong> X</p>
+                    <p class="mt-4 text-slate-600">Beyond the first 90 days, my ambitions are focused on deep expertise, leadership, and a well-rounded life.</p>
+                    <div class="mt-8 text-left space-y-6 text-slate-600 bg-slate-50 p-8 rounded-xl border border-slate-200">
+                        <p><strong>Master the Craft:</strong> My primary goal is to master the scalable business frameworks and playbooks at the heart of Acquisition.com. I want to develop the ability to diagnose business constraints and provide high-leverage solutions on the spot, just as Alex does in the Hormozi Hotline series.</p>
+                        <p><strong>Grow with ACQ:</strong> I am applying to ACQ with the intention of building my career here. I am eager to grow tremendously within the Strategy Associate role and earn my way into senior leadership, contributing to the company's long-term success.</p>
+                        <p><strong>Build a Family:</strong> Outside of my professional ambitions, a core part of my life's vision is to get married and raise a family of 3-5 kids, building a strong and loving home.</p>
+                        <p><strong>Maintain Health & Vitality:</strong> I am blessed with excellent health, and I am committed to maintaining it. Staying in peak physical and mental condition is crucial for performing at a high level in all areas of my life.</p>
                     </div>
                 </div>
             </div>
