--- a/goals.html
+++ b/goals.html
@@ -96,12 +96,12 @@
         
         <!-- Short-Term Goals Section -->
         <section id="short-term-goals" class="container mx-auto px-6 pt-24 pb-16">
-            <div class="max-w-5xl mx-auto">
+            <div class="max-w-4xl mx-auto">
                 <div class="text-center mb-16">
                     <h2 class="text-3xl md:text-4xl font-bold text-slate-900">My First 90 Days</h2>
                     <p class="mt-4 max-w-2xl mx-auto text-slate-600">Assuming I earn the role, here is how I plan to approach my first three months to create immediate value.</p>
                 </div>
-                <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-8 text-left">
+                <div class="grid grid-cols-1 gap-8 text-left">
                     <!-- 30 Days -->
                     <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
                         <div class="text-sky-500 font-bold text-lg text-center">First 30 Days</div>
