--- a/deliverables.html
+++ b/deliverables.html
@@ -20,6 +20,11 @@
             background-color: #f8fafc; /* slate-50 */
             color: #0f172a; /* slate-900 */
         }
+        .section-compact {
+            min-height: auto;
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
         .glass-effect {
             background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(10px);
@@ -95,7 +100,7 @@
             <div class="max-w-3xl mx-auto">
                 <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-slate-900">Work Product & Deliverables</h1>
                 <p class="mt-4 text-lg text-slate-600">
-                    Talk is cheap. The following are sanitized examples of my work that reflect the quality, clarity, and strategic thinking I would bring to Acquisition.com.
+                    Anyone can claim anything. So I figured I'd share examples of my work that reflect the quality, clarity, and strategic thinking I'll bring to Acquisition.com.
                 </p>
             </div>
         </section>
@@ -128,13 +133,29 @@
                     <!-- Card 3: Spreadsheet -->
                     <a href="#" class="group block bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:border-sky-400">
                         <div class="flex-shrink-0 h-16 w-16 rounded-lg bg-slate-100 flex items-center justify-center ring-1 ring-slate-200 group-hover:bg-sky-50 transition-colors">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-slate-800 mt-6">Financial Model</h3>
                         <p class="text-slate-600 mt-2">An example of a financial model used for market sizing and ROI projections to support a strategic market entry analysis.</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Spreadsheet &rarr;</div>
                     </a>
 
+                </div>
+            </div>
+        </section>
+
+        <!-- Section: Next Page -->
+        <section id="next-page" class="section-compact bg-slate-50 border-t border-slate-200">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-2xl font-bold text-slate-800">Beyond contributing quality work, I believe I am a seamless cultural fit at ACQ, too.</h2>
+                <p class="mt-2 text-slate-600">The next page details my alignment with your core values.</p>
+                <div class="mt-8">
+                    <a href="/fit.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        View Culture Fit
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
                 </div>
             </div>
         </section>
