--- a/fit.html
+++ b/fit.html
@@ -20,6 +20,11 @@
             background-color: #f8fafc; /* slate-50 */
             color: #0f172a; /* slate-900 */
         }
+        .section-compact {
+            min-height: auto;
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
         .glass-effect {
             background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(10px);
@@ -151,7 +156,7 @@
                         <!-- Quality Card 2 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                              <h3 class="text-xl font-bold text-slate-800">Energy</h3>
-                            <p class="text-slate-600 mt-4">I bring a contagious, positive energy to every room I enter. People feel my kindness and positivity: I’ve even had strangers compliment my good energy at restaurants, the beach, church, etc. I genuinely enjoy raising the collective morale and ceiling of the group.</p>
+                            <p class="text-slate-600 mt-4">I bring a contagious, positive energy to every room I enter. People feel my kindness and positivity—I’ve even had strangers compliment my good energy. I genuinely enjoy raising the collective morale and ceiling of the group.</p>
                         </div>
                         <!-- Quality Card 3 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
@@ -160,8 +165,8 @@
                         </div>
                         <!-- Quality Card 4 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-xl font-bold text-slate-800">Detail-Oriented</h3>
-                            <p class="text-slate-600 mt-4">My experiences in law and computer programming have trained me to be meticulous. I understand that every detail matters, a lesson reinforced by a childhood deal with my mom: $10 for every silly math mistake. I never made one again.</p>
+                            <h3 class="text-xl font-bold text-slate-800">Detail Oriented</h3>
+                            <p class="text-slate-600 mt-4">My experiences in law and computer programming have trained me to be meticulous. I understand that every detail matters, a lesson reinforced by a childhood deal with my mom—$10 for every silly math mistake. I never made one again.</p>
                         </div>
                         <!-- Quality Card 5 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
@@ -181,7 +186,7 @@
                         <!-- Quality Card 8 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-xl font-bold text-slate-800">Good Communicator</h3>
-                            <p class="text-slate-600 mt-4">I listen well, write clearly, and read the room. I do my best to be articulate and easy to understand, and I make no assumptions; I spell things out to make sure everyone is on the same page.</p>
+                            <p class="text-slate-600 mt-4">I listen well, write clearly, and read the room. I do my best to be articulate and easy to understand, and I make no assumptions—I spell things out to make sure everyone is on the same page.</p>
                         </div>
                         <!-- Quality Card 9 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
@@ -202,6 +207,25 @@
         <section id="humility-note" class="container mx-auto px-6 pt-16">
             <div class="max-w-3xl mx-auto text-center bg-slate-50 p-6 rounded-xl border border-slate-200">
                 <p class="text-slate-600 italic">A quick final note: I’m generally quite humble, but I've been super straightforward with my strengths in this application. We don’t have the luxury of getting to know each other over the course of days or weeks, so I wanted to be as clear as possible about the value I can bring to the team.</p>
+            </div>
+        </section>
+        
+        <!-- Section: Next Page -->
+        <section id="next-page" class="section-compact bg-slate-50 border-t border-slate-200 mt-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-2xl font-bold text-slate-800">Choose Your Next Step</h2>
+                <p class="mt-2 text-slate-600 max-w-2xl mx-auto">You can either continue to my formal answers to every application question, or if you're ready, you can skip ahead to see my goals and aspirations for both the role and my career.</p>
+                <div class="mt-8 flex flex-col sm:flex-row items-center justify-center gap-4">
+                    <a href="/responses.html" class="w-full sm:w-auto flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        View Application Responses
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
+                    <a href="/goals.html" class="w-full sm:w-auto flex items-center justify-center gap-x-3 bg-slate-200 text-slate-800 font-semibold py-3 px-8 rounded-lg hover:bg-slate-300 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        Go Straight to My Goals
+                    </a>
+                </div>
             </div>
         </section>
 
