--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,11 @@
             background-color: #f8fafc; /* slate-50 */
             color: #0f172a; /* slate-900 */
         }
+        .section-compact {
+            min-height: auto;
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
         .glass-effect {
             background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(10px);
@@ -131,6 +136,22 @@
                         <div id="timeline-items" class="space-y-16"></div>
 
                     </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Section: Next Page -->
+        <section id="next-page" class="section-compact bg-slate-50 border-t border-slate-200">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-2xl font-bold text-slate-800">Would you like to see the caliber of my work?</h2>
+                <p class="mt-2 text-slate-600">The next page includes examples of my deliverables.</p>
+                <div class="mt-8">
+                    <a href="/deliverables.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        View Deliverable Examples
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
                 </div>
             </div>
         </section>
