--- a/fun.html
+++ b/fun.html
@@ -193,6 +193,22 @@
             </div>
         </section>
 
+        <!-- Section: Next Page -->
+        <section id="next-page" class="bg-slate-50 border-t border-slate-200 py-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-2xl font-bold text-slate-800">Almost there :)</h2>
+                <p class="mt-2 text-slate-600">The last page includes a thank you message and next steps.</p>
+                <div class="mt-8">
+                    <a href="/thankyou.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        View Thank You & Next Steps
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- JavaScript for interactivity -->
