--- a/responses.html
+++ b/responses.html
@@ -71,7 +71,7 @@
             <!-- Mobile Menu Button -->
             <div class="lg:hidden">
                 <button id="mobile-menu-button" class="text-slate-800 focus:outline-none z-50">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0- 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                     </svg>
                 </button>
@@ -147,6 +147,22 @@
                     <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden"><button class="accordion-header w-full flex justify-between items-center text-left p-6"><span class="text-lg font-semibold text-slate-800">Tell us about a time you improved a business process or result.</span><div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div></button><div class="accordion-content px-6"><div class="prose prose-slate max-w-none text-slate-600"><p>Placeholder Answer #22</p></div></div></div>
                     <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden"><button class="accordion-header w-full flex justify-between items-center text-left p-6"><span class="text-lg font-semibold text-slate-800">Share an example of a deck, memo, or analysis that simplified a complex topic.</span><div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div></button><div class="accordion-content px-6"><div class="prose prose-slate max-w-none text-slate-600"><p>Placeholder Answer #23</p></div></div></div>
                     <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden"><button class="accordion-header w-full flex justify-between items-center text-left p-6"><span class="text-lg font-semibold text-slate-800">Share a link to a short video introducing yourself.</span><div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div></button><div class="accordion-content px-6"><div class="prose prose-slate max-w-none text-slate-600"><p>Placeholder Answer #24</p></div></div></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section: Next Page -->
+        <section id="next-page" class="bg-slate-50 border-t border-slate-200 py-16">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-2xl font-bold text-slate-800">Ready to see my plan of action?</h2>
+                <p class="mt-2 text-slate-600">The next page outlines my 30-60-90 day goals and long-term aspirations.</p>
+                <div class="mt-8">
+                    <a href="/goals.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        View My Goals
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
                 </div>
             </div>
         </section>
