--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                 </div>
                 <hr class="border-slate-200 my-8">
                 <div class="prose prose-slate max-w-none text-slate-600 space-y-4">
-                    <p><strong>Why:</strong> To truly demonstrate my fit for the high-stakes Strategy Associate role, a standard resume is insufficient. A company that values competitive greatness deserves an application that embodies it. This website is my solution.</p>
-                    <p><strong>What:</strong> The challenge is to convey the depth of my alignment with your core values—Competitive Greatness, Sincere Candor, and Unimpeachable Character—and to prove my readiness to contribute from day one. A flat document cannot adequately showcase the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences.</p>
+                    <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
+                    <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. A flat document would fall short of adequately showcasing the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences and will be bringing to ACQ.</p>
                     <p><strong>How:</strong> This website serves as a comprehensive, multi-part deliverable designed for clarity and efficiency. It is my application in action. Here, you can find:<br>
                         •   My full story and background.<br>
                         •   A detailed breakdown of my alignment with your culture.<br>
