--- a/fit.html
+++ b/fit.html
@@ -81,7 +81,7 @@
 
 
     <!-- Main Content Section -->
-    <main class="pt-32 pb-16">
+    <main class="pt-32">
         <section id="intro" class="container mx-auto px-6 text-center">
             <div class="max-w-3xl mx-auto">
                 <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-slate-900">Alignment & Cultural Fit</h1>
@@ -205,13 +205,13 @@
 
         <!-- Humility Note Section -->
         <section id="humility-note" class="container mx-auto px-6 pt-16">
-            <div class="max-w-3xl mx-auto text-center bg-slate-50 p-6 rounded-xl border border-slate-200">
+            <div class="max-w-3xl mx-auto text-center bg-white p-6 rounded-xl border border-slate-200">
                 <p class="text-slate-600 italic">A quick final note: I’m generally quite humble, but I've been super straightforward with my strengths in this application. We don’t have the luxury of getting to know each other over the course of days or weeks, so I wanted to be as clear as possible about the value I can bring to the team.</p>
             </div>
         </section>
         
         <!-- Section: Next Page -->
-        <section id="next-page" class="section-compact bg-slate-50 border-t border-slate-200 mt-16">
+        <section id="next-page" class="section-compact bg-white border-t border-slate-200 mt-16">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-2xl font-bold text-slate-800">Choose Your Next Step</h2>
                 <p class="mt-2 text-slate-600 max-w-2xl mx-auto">You can either continue to my formal answers to every application question, or if you're ready, you can skip ahead to see my goals and aspirations for both the role and my career.</p>
@@ -230,6 +230,19 @@
         </section>
 
     </main>
+
+    <!-- Footer -->
+    <footer class="bg-slate-100 border-t border-slate-200">
+        <div class="container mx-auto px-6 py-8 text-center text-slate-500">
+            <p class="font-semibold text-slate-700">Walter Petrouchin</p>
+            <p class="text-sm">
+                <a href="mailto:walter.petr@yahoo.com" class="hover:text-sky-500 transition-colors">walter.petr@yahoo.com</a> | (310) 874-4247
+            </p>
+            <p class="text-sm mt-1">
+                <a href="https://www.linkedin.com/in/walterpetrouchin/" target="_blank" rel="noopener noreferrer" class="text-sky-500 hover:underline">LinkedIn Profile</a>
+            </p>
+        </div>
+    </footer>
 
     <!-- JavaScript for interactivity -->
     <script>
