--- a/index.html
+++ b/index.html
@@ -150,76 +150,91 @@
         </div>
     </section>
 
-    <!-- Section 2: Video Introduction -->
-    <section id="video" class="section section-compact bg-white">
-        <div class="container mx-auto px-6 text-center fade-in">
-            <div class="mb-12">
-                <h2 class="text-sm font-bold uppercase tracking-widest text-sky-500">Introduction</h2>
-                <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">A 60-Second Intro</p>
-                <p class="mt-4 max-w-2xl mx-auto text-slate-600">Nice to meet you!</p>
-            </div>
-            <div class="max-w-4xl mx-auto">
-                <div class="aspect-video bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200">
-                     <!-- In a real scenario, you would replace this with your actual video embed code from YouTube, Vimeo, or Loom -->
-                    <iframe 
-                        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                        allowfullscreen
-                        class="w-full h-full"
-                        title="Placeholder Video">
-                    </iframe>
+    <main>
+        <!-- Section 2: Video Introduction -->
+        <section id="video" class="section section-compact bg-white">
+            <div class="container mx-auto px-6 text-center fade-in">
+                <div class="mb-12">
+                    <h2 class="text-sm font-bold uppercase tracking-widest text-sky-500">Introduction</h2>
+                    <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">A 60-Second Intro</p>
+                    <p class="mt-4 max-w-2xl mx-auto text-slate-600">Nice to meet you!</p>
+                </div>
+                <div class="max-w-4xl mx-auto">
+                    <div class="aspect-video bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200">
+                         <!-- In a real scenario, you would replace this with your actual video embed code from YouTube, Vimeo, or Loom -->
+                        <iframe 
+                            src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen
+                            class="w-full h-full"
+                            title="Placeholder Video">
+                        </iframe>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Section 3: The Memo -->
-    <section id="memo" class="section section-compact">
-        <div class="container mx-auto px-6 fade-in">
-            <div class="text-center mb-12">
-                <h2 class="text-sm font-bold uppercase tracking-widest text-sky-500">My Approach</h2>
-                <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">My First Deliverable To You</p>
-                <p class="mt-4 max-w-2xl mx-auto text-slate-600">This site is a live demonstration of the clarity, quality, and initiative I bring to my work. I know you have a memo-writing culture, so I wrote you one.</p>
-            </div>
-            <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200">
-                <div class="memo-grid items-center mb-6 text-sm md:text-base">
-                    <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Recruiting Team & Leadership</p>
-                    <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
-                    <p class="memo-label">DATE:</p><p id="memo-date" class="text-slate-800"></p>
-                    <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Application for Strategy Associate Role</p>
+        <!-- Section 3: The Memo -->
+        <section id="memo" class="section section-compact">
+            <div class="container mx-auto px-6 fade-in">
+                <div class="text-center mb-12">
+                    <h2 class="text-sm font-bold uppercase tracking-widest text-sky-500">My Approach</h2>
+                    <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">My First Deliverable To You</p>
+                    <p class="mt-4 max-w-2xl mx-auto text-slate-600">This site is a live demonstration of the clarity, quality, and initiative I bring to my work. I know you have a memo-writing culture, so I wrote you one.</p>
                 </div>
-                <hr class="border-slate-200 my-8">
-                <div class="prose prose-slate max-w-none text-slate-600 space-y-4">
-                    <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
-                    <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. A flat document would fall short of adequately showcasing the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences and will be bringing to ACQ.</p>
-                    <p><strong>How:</strong> This website serves as a comprehensive, multi-part deliverable designed for clarity and efficiency. It is my application in action. Here, you can find:<br>
-                        •   My full story and background.<br>
-                        •   A detailed breakdown of my alignment with your culture.<br>
-                        •   A proactive 30-60-90 day plan to create immediate value.<br>
-                        •   A glimpse into who I am beyond my work.</p>
-                    <p><strong>Now:</strong> I invite you to explore the pages of this site. Each section is a testament to the quality and initiative I bring. The next step is to schedule a conversation, where we can discuss how my unique blend of skills and my deep resonance with your mission can be an immediate asset to your team.</p>
-                    <p class="pt-4">Thank you for the opportunity to apply and for your time and consideration.</p>
+                <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200">
+                    <div class="memo-grid items-center mb-6 text-sm md:text-base">
+                        <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Recruiting Team & Leadership</p>
+                        <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
+                        <p class="memo-label">DATE:</p><p id="memo-date" class="text-slate-800"></p>
+                        <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Application for Strategy Associate Role</p>
+                    </div>
+                    <hr class="border-slate-200 my-8">
+                    <div class="prose prose-slate max-w-none text-slate-600 space-y-4">
+                        <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
+                        <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. A flat document would fall short of adequately showcasing the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences and will be bringing to ACQ.</p>
+                        <p><strong>How:</strong> This website serves as a comprehensive, multi-part deliverable designed for clarity and efficiency. It is my application in action. Here, you can find:<br>
+                            •   My full story and background.<br>
+                            •   A detailed breakdown of my alignment with your culture.<br>
+                            •   A proactive 30-60-90 day plan to create immediate value.<br>
+                            •   A glimpse into who I am beyond my work.</p>
+                        <p><strong>Now:</strong> I invite you to explore the pages of this site. Each section is a testament to the quality and initiative I bring. The next step is to schedule a conversation, where we can discuss how my unique blend of skills and my deep resonance with your mission can be an immediate asset to your team.</p>
+                        <p class="pt-4">Thank you for the opportunity to apply and for your time and consideration.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Section 4: Next Page -->
-    <section id="next-page" class="section-compact bg-white border-t border-slate-200">
-        <div class="container mx-auto px-6 text-center">
-            <h2 class="text-2xl font-bold text-slate-800">Ready for the Full Story?</h2>
-            <p class="mt-2 text-slate-600">The next page details my background, experiences, and what drives me.</p>
-            <div class="mt-8">
-                <a href="/resume.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
-                    View My Resume & Story
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-                    </svg>
-                </a>
+        <!-- Section 4: Next Page -->
+        <section id="next-page" class="section-compact bg-white border-t border-slate-200">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-2xl font-bold text-slate-800">Ready for the Full Story?</h2>
+                <p class="mt-2 text-slate-600">The next page details my background, experiences, and what drives me.</p>
+                <div class="mt-8">
+                    <a href="/resume.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
+                        View My Resume & Story
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
+                </div>
             </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-slate-100 border-t border-slate-200">
+        <div class="container mx-auto px-6 py-8 text-center text-slate-500">
+            <p class="font-semibold text-slate-700">Walter Petrouchin</p>
+            <p class="text-sm">
+                <a href="mailto:walter.petr@yahoo.com" class="hover:text-sky-500 transition-colors">walter.petr@yahoo.com</a> | (310) 874-4247
+            </p>
+            <p class="text-sm mt-1">
+                <a href="https://www.linkedin.com/in/walterpetrouchin/" target="_blank" rel="noopener noreferrer" class="text-sky-500 hover:underline">LinkedIn Profile</a>
+            </p>
         </div>
-    </section>
+    </footer>
 
     <!-- JavaScript for interactivity -->
     <script>
