--- a/deliverables.html
+++ b/deliverables.html
@@ -95,7 +95,7 @@
 
 
     <!-- Main Content Section -->
-    <main class="pt-32 pb-16">
+    <main class="pt-32">
         <section id="intro" class="container mx-auto px-6 text-center">
             <div class="max-w-3xl mx-auto">
                 <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-slate-900">Work Product & Deliverables</h1>
@@ -133,7 +133,7 @@
                     <!-- Card 3: Spreadsheet -->
                     <a href="#" class="group block bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:border-sky-400">
                         <div class="flex-shrink-0 h-16 w-16 rounded-lg bg-slate-100 flex items-center justify-center ring-1 ring-slate-200 group-hover:bg-sky-50 transition-colors">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-slate-800 mt-6">Financial Model</h3>
                         <p class="text-slate-600 mt-2">An example of a financial model used for market sizing and ROI projections to support a strategic market entry analysis.</p>
@@ -145,7 +145,7 @@
         </section>
 
         <!-- Section: Next Page -->
-        <section id="next-page" class="section-compact bg-slate-50 border-t border-slate-200">
+        <section id="next-page" class="section-compact bg-white border-t border-slate-200">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-2xl font-bold text-slate-800">Beyond contributing quality work, I believe I am a seamless cultural fit at ACQ, too.</h2>
                 <p class="mt-2 text-slate-600">The next page details my alignment with your core values.</p>
@@ -162,17 +162,24 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer class="bg-slate-100 border-t border-slate-200">
+        <div class="container mx-auto px-6 py-8 text-center text-slate-500">
+            <p class="font-semibold text-slate-700">Walter Petrouchin</p>
+            <p class="text-sm">
+                <a href="mailto:walter.petr@yahoo.com" class="hover:text-sky-500 transition-colors">walter.petr@yahoo.com</a> | (310) 874-4247
+            </p>
+            <p class="text-sm mt-1">
+                <a href="https://www.linkedin.com/in/walterpetrouchin/" target="_blank" rel="noopener noreferrer" class="text-sky-500 hover:underline">LinkedIn Profile</a>
+            </p>
+        </div>
+    </footer>
+
     <!-- JavaScript for interactivity -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             
-            // --- Header Scroll Effect ---
-            const header = document.getElementById('main-header');
-            if (header) {
-                // The page header is always visible with the glass effect
-            }
-
-            // --- Mobile Menu Logic (Simplified) ---
+            // --- Mobile Menu Logic ---
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
             const mobileMenuLinks = mobileMenu.querySelectorAll('a');
@@ -194,22 +201,13 @@
             };
 
             if (mobileMenuButton && mobileMenu) {
-                // Event Listeners
                 mobileMenuButton.addEventListener('click', toggleMobileMenu);
-
-                // Close menu when a link is clicked
-                mobileMenuLinks.forEach(link => {
-                    link.addEventListener('click', toggleMobileMenu);
-                });
-
-                // Close menu when clicking on the overlay background
+                mobileMenuLinks.forEach(link => link.addEventListener('click', toggleMobileMenu));
                 mobileMenu.addEventListener('click', (event) => {
                     if (event.target === mobileMenu) {
                         toggleMobileMenu();
                     }
                 });
-
-                // Close menu on escape key press for accessibility
                 window.addEventListener('keydown', (e) => {
                     const isMenuOpen = !mobileMenu.classList.contains('pointer-events-none');
                     if (e.key === 'Escape' && isMenuOpen) {
