--- a/resume.html
+++ b/resume.html
@@ -98,7 +98,7 @@
 
 
     <!-- Main Content Section -->
-    <main class="pt-32 pb-16">
+    <main class="pt-32">
         <section id="resume-content" class="container mx-auto px-6 text-center min-h-[calc(100vh-8rem)] flex items-center justify-center">
             <div class="max-w-3xl mx-auto">
                 <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-slate-900">My Resume & Story</h1>
@@ -157,6 +157,19 @@
         </section>
 
     </main>
+
+    <!-- Footer -->
+    <footer class="bg-slate-100 border-t border-slate-200">
+        <div class="container mx-auto px-6 py-8 text-center text-slate-500">
+            <p class="font-semibold text-slate-700">Walter Petrouchin</p>
+            <p class="text-sm">
+                <a href="mailto:walter.petr@yahoo.com" class="hover:text-sky-500 transition-colors">walter.petr@yahoo.com</a> | (310) 874-4247
+            </p>
+            <p class="text-sm mt-1">
+                <a href="https://www.linkedin.com/in/walterpetrouchin/" target="_blank" rel="noopener noreferrer" class="text-sky-500 hover:underline">LinkedIn Profile</a>
+            </p>
+        </div>
+    </footer>
 
     <!-- JavaScript for interactivity -->
     <script>
