--- a/deliverables.html
+++ b/deliverables.html
@@ -31,20 +31,6 @@
             -webkit-backdrop-filter: blur(10px);
             border: 1px solid rgba(0, 0, 0, 0.05);
         }
-        .highlight-text {
-            background: -webkit-linear-gradient(45deg, #0ea5e9, #8b5cf6); /* sky-500 to violet-500 */
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.8s ease-out, transform 0.8s ease-out;
-        }
-        .fade-in.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
         /* Mobile Menu Transition */
         #mobile-menu {
             transition: opacity 0.3s ease-in-out;
@@ -115,8 +101,8 @@
                         <div class="flex-shrink-0 h-16 w-16 rounded-lg bg-slate-100 flex items-center justify-center ring-1 ring-slate-200 group-hover:bg-sky-50 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Investment Memo</h3>
-                        <p class="text-slate-600 mt-2">A concise, data-driven analysis for a key investment decision, demonstrating clear and persuasive communication.</p>
+                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Memo</h3>
+                        <p class="text-slate-600 mt-2">Placeholder #1</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Memo &rarr;</div>
                     </a>
 
@@ -125,8 +111,8 @@
                         <div class="flex-shrink-0 h-16 w-16 rounded-lg bg-slate-100 flex items-center justify-center ring-1 ring-slate-200 group-hover:bg-sky-50 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3h3m-3 4h3m-3 4h3m-3 4h3" /></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Strategic Deck</h3>
-                        <p class="text-slate-600 mt-2">A board-level presentation outlining a 100-day growth plan for a portfolio company, focusing on actionable initiatives.</p>
+                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Deck</h3>
+                        <p class="text-slate-600 mt-2">Placeholder #2</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Deck &rarr;</div>
                     </a>
 
@@ -135,8 +121,8 @@
                         <div class="flex-shrink-0 h-16 w-16 rounded-lg bg-slate-100 flex items-center justify-center ring-1 ring-slate-200 group-hover:bg-sky-50 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Financial Model</h3>
-                        <p class="text-slate-600 mt-2">An example of a financial model used for market sizing and ROI projections to support a strategic market entry analysis.</p>
+                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Spreadsheet</h3>
+                        <p class="text-slate-600 mt-2">Placeholder #3</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Spreadsheet &rarr;</div>
                     </a>
 
