--- a/deliverables.html
+++ b/deliverables.html
@@ -97,12 +97,12 @@
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     
                     <!-- Card 1: Memo -->
-                    <a href="#" class="group block bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:border-sky-400">
+                    <a href="https://drive.google.com/file/d/1ySMl4OD0QhPG8Tt1YAFsYkP2oWtwISoB/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="group block bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:border-sky-400">
                         <div class="flex-shrink-0 h-16 w-16 rounded-lg bg-slate-100 flex items-center justify-center ring-1 ring-slate-200 group-hover:bg-sky-50 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Memo</h3>
-                        <p class="text-slate-600 mt-2">Placeholder #1</p>
+                        <h3 class="text-2xl font-bold text-slate-800 mt-6">Strategic Memo</h3>
+                        <p class="text-slate-600 mt-2">I synthesized a dense, 10-page legal analysis into this three-page strategic recommendation, using the Why, What, How, Now framework to simplify complex concepts and deliver a clear, actionable plan.</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Memo &rarr;</div>
                     </a>
 
