--- a/deliverables.html
+++ b/deliverables.html
@@ -102,7 +102,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-slate-800 mt-6">Strategic Memo</h3>
-                        <p class="text-slate-600 mt-2">I synthesized a dense, 10-page legal analysis into this three-page strategic recommendation, using the Why, What, How, Now framework to simplify complex concepts and deliver a clear, actionable plan.</p>
+                        <p class="text-slate-600 mt-2">I synthesized a dense, 10-page legal analysis I'd written for a law firm partner into this three-page strategic recommendation, using the Why, What, How, Now framework to simplify complex concepts and deliver a clear, actionable plan.</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Memo &rarr;</div>
                     </a>
 
