--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <!-- Section 4: Next Page -->
         <section id="next-page" class="section-compact bg-white border-t border-slate-200">
             <div class="container mx-auto px-6 text-center">
-                <h2 class="text-2xl font-bold text-slate-800">Ready for the Full Story?</h2>
+                <h2 class="text-2xl font-bold text-slate-800">Get to know me</h2>
                 <p class="mt-2 text-slate-600">The next page details my background, experiences, and what drives me.</p>
                 <div class="mt-8">
                     <a href="/resume.html" class="inline-flex items-center justify-center gap-x-3 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors text-lg shadow-md hover:shadow-lg transform hover:-translate-y-1">
